--- a/package.json
+++ b/package.json
@@ -17,32 +17,27 @@
   },
   "main": "background.js",
   "dependencies": {
-    "vue": "^2.6.11",
-    "eslint": "^6.8.0",
-    "babel-eslint": "^10.0.3"
+    "core-js": "^3.4.4",
+    "mocha": "^7.0.0",
+    "socket.io-client": "^2.3.0",
+    "vue": "^2.6.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-plugin-unit-mocha": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "@vue/devtools": "^5.3.3",
     "@vue/eslint-config-standard": "^5.1.0",
-    "chai": "^4.2.0",
+    "babel-eslint": "^10.0.3",
     "electron": "^7.1.9",
-    "electron-builder": "^22.2.0",
-    "electron-devtools-installer": "^2.2.4",
-    "eslint-loader": "^3.0.3",
+    "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^6.1.2",
-    "mocha": "^7.0.0",
+    "eslint-plugin-vue": "^5.0.0",
     "spectron": "^9.0.0",
-    "vue-cli": "^2.9.6",
     "vue-cli-plugin-electron-builder": "^2.0.0-beta.1",
-    "vue-template-compiler": "^2.6.11",
-    "webdriver-manager": "^12.1.7"
+    "vue-template-compiler": "^2.6.11"
   }
 }
